# x402

./: .editorconfig  .env.example  .gitattributes  .gitignore  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  generate_history.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
client/: Cargo.toml  README.md
client/src/: lib.rs  main.rs
docs/: authorization.md  custody-split.md  nonce-bitmap.md
examples/: README.md  agent-budget.mjs  drift_attack_demo.rs  pay-once.mjs  wall-express.mjs
idl/: x402_settle.json
programs/x402/: Cargo.toml  README.md
programs/x402/src/: lib.rs
sdk/: README.md  package.json  tsconfig.build.json  tsconfig.json
sdk/src/: cli.ts  client.ts  core.ts  index.ts  protocol.ts  server.ts  wall.ts
sdk/test/: concurrent.ts  e2e.ts  fund.ts  policy.ts  subscription.ts  suite.ts  wall-e2e.ts  wallet.ts
sdk/zero/: client.d.mts  client.mjs  e2e.mjs  verify.mjs  wallet.d.mts  wallet.mjs
src/: lib.rs  main.rs  report.rs  types.rs
src/classifier/: mod.rs
src/decoder/: anchor_generic.rs  drift_v2.rs  jupiter.rs  kamino.rs  marginfi.rs  mod.rs  registry.rs  spl_token.rs  squads.rs  system.rs  token_2022.rs
src/engine/: diff.rs  mod.rs  simulate.rs
tests/: decoder_unit.rs  devnet_integration.rs  drift_attack_e2e.rs  protocol_decoders.rs  squads_unit.rs
web/: .gitignore  next.config.mjs  package-lock.json  package.json
web/.vercel/: project.json
web/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
web/app/_components/: SplineHero.tsx
web/app/api/health/: route.ts
web/app/docs/: _components.tsx  _nav.ts  layout.tsx  page.tsx
web/app/docs/api-reference/: page.tsx
web/app/docs/architecture/: page.tsx
web/app/docs/cli/: page.tsx
web/app/docs/decoders/: page.tsx
web/app/docs/drift-2026/: page.tsx
web/app/docs/getting-started/: page.tsx
web/app/docs/integrate/: page.tsx
web/app/docs/risk-model/: page.tsx
web/public/.well-known/: crif.json
