[package]
name = "crif"
version = "0.1.0"
edition = "2021"
description = "Transaction legibility and simulation engine for Solana — decodes what a tx actually does before you sign it"

[dependencies]
solana-client = "2.0"
solana-sdk = "2.0"
solana-transaction-status = "2.0"
solana-account-decoder = "2.0"
spl-token = "6.0"
spl-associated-token-account = "5.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
bs58 = "0.5"
clap = { version = "4", features = ["derive"] }
bincode = "1.3"
borsh = "1"

[profile.release]
opt-level = 3
lto = "thin"
