[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CURVED core"]
license = "MIT"
repository = "https://github.com/Curved-labs/x402"
homepage = "https://curved.dev"
readme = "README.md"
rust-version = "1.78"
description = "Facilitator-less x402 payments on Solana"
keywords = ["solana", "anchor", "x402", "payments"]
categories = ["cryptography", "network-programming"]

[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
solana-program = "2"
borsh = "1.5"
thiserror = "1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
